--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-	<!-- Header -->
 	<header class="jumbotron">
 		<h1 class="display-3">Work Day Scheduler</h1>
 		<p class="lead">A simple calendar app for scheduling your work day</p>
@@ -23,7 +22,7 @@
 
 	<div class="container">
 
-		<!-- Timeblocks start here -->
+		<!-- Timeblocks -->
 
 		<div id="hour8" class="row time-block">
             <div class="col-md-1 hour">
